= HEAD

* Make minjs compressor support in assets plugin support latest version of Minjs (jeremyevans)

* Add params_capturing plugin, for storing matcher captures in the request params (jeremyevans)

= 2.10.0 (2016-01-15)

* Do not override existing Content-Type header in json plugin (jeremyevans)

* Add :content_type option to json plugin to override Content-Type header used (Kyrremann) (#58)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

* Add Streaming::Stream#write method so that IO.copy_stream will work (janko-m) (#56)

= 2.9.0 (2015-12-15)

* Support passing the content as a string argument instead of a block in the content_for plugin (badosu) (#52)

= 2.8.0 (2015-11-16)

* Add multi_view plugin for easily setting up routing for rendering multiple views (jeremyevans)

* Make content_for plugin work with haml and potentially other non-erb template engines (plukevdh) (#50)

= 2.7.0 (2015-10-13)

* Add run_handler plugin for modifying rack response arrays when using r.run, and continuing routing for 404 responses (jeremyevans)

* Add response_request plugin allowing response object access to request object (jeremyevans)

* Add default_status plugin for overriding the default response status (celsworth) (#47)

* Make RodaCache synchronize access on MRI (jeremyevans)

* Support opts[:host_matcher_captures] = true to make :host=>/regexp/ matcher yield captures in the header_matchers plugin (jeremyevans)

* Allow Roda.rewrite_path to take a block in the path_rewriter plugin (Freaky) (#45)

= 2.6.0 (2015-09-14)

* Add :params and :params! matchers to param_matchers plugin (jeremyevans)

* Merge options when loading csrf plugin multiple times (jeremyevans)

* Allow request.halt to work in before hooks in the hooks plugin (celsworth) (#38)

= 2.5.1 (2015-08-13)

* Allow multi_route and middleware plugins to work together (janko-m) (#36)

= 2.5.0 (2015-07-14)
