@@ -1,5 +1,7 @@
 = HEAD
 
+* Support :scope option in render plugin, for specifying object in which to evaluate the template (jeremyevans)
+
 * Make minjs compressor support in assets plugin support latest version of Minjs (jeremyevans)
 
 * Add params_capturing plugin, for storing matcher captures in the request params (jeremyevans)
